# rte-rrtmgp-cpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: continuous-integration.yml
allsky/: README.md  allsky_check.py  allsky_init.py  allsky_plot.py  allsky_run.py  compare-to-reference.py  copy_and_rename.sh  make_links.sh
config/: annuna.cmake  cartesius.cmake  cloudy.cmake  das5.cmake  das6.cmake  macbook_brew.cmake  macbook_brew_gcc.cmake  snellius.cmake  ubuntu.cmake  ubuntu_20lts.cmake  ubuntu_22lts.cmake
data/: aerosol_optics.nc
include/: Aerosol_optics.h  Array.h  Cloud_optics.h  Fluxes.h  Gas_concs.h  Gas_optics.h  Gas_optics_rrtmgp.h  Master.h  Mem_pool_gpu.h  Netcdf_interface.h  Optical_props.h  Rte_lw.h  Rte_sw.h  Source_functions.h  Types.h  optical_props_kernel_launcher_cuda.h  rrtmgp_kernel_launcher_cuda.h  rrtmgp_kernels.h  rrtmgp_kernels_cuda.h  rte_kernel_launcher_cuda.h  subset_kernel_launcher_cuda.h  tools_gpu.h  tuner.h  types.h
include_kernels_cuda/: array_subset.h  subset_kernels_cuda.h
include_rt/: Aerosol_optics_rt.h  Cloud_optics_rt.h  Fluxes_rt.h  Gas_concs_rt.h  Gas_optics_rrtmgp_rt.h  Gas_optics_rt.h  Optical_props_rt.h  Raytracer.h  Raytracer_bw.h  Rte_lw_rt.h  Rte_sw_rt.h  Source_functions_rt.h  gpt_combine_kernel_launcher_cuda_rt.h  optical_props_kernel_launcher_cuda_rt.h  raytracer_definitions.h  raytracer_functions.h  raytracer_kernels.h  raytracer_kernels_bw.h  rrtmgp_kernel_launcher_cuda_rt.h  rte_kernel_launcher_cuda_rt.h  subset_kernel_launcher_cuda_rt.h
include_rt_kernels/: gas_optics_rrtmgp_kernels_cuda_rt.h  gpt_combine_kernel_launcher_cuda_rt.h  gpt_combine_kernels_cuda_rt.h  optical_props_kernel_launcher_cuda_rt.h  optical_props_kernels_cuda_rt.h  raytracer_kernels.h  raytracer_kernels_bw.h  rrtmgp_kernel_launcher_cuda_rt.h  rte_kernel_launcher_cuda_rt.h  rte_solver_kernels_cuda_rt.h  subset_kernel_launcher_cuda_rt.h  subset_kernels_cuda_rt.h
include_test/: Master.h  Netcdf_interface.h  Radiation_solver.h  Radiation_solver_bw.h  Radiation_solver_rt.h  Status.h
kernel_tuner/: planck_source_kernel.py
python/: box_cloud.py  compile_kernels.sh  radiation.pyx  setup.py  test.py
rcemip/: README.md  compare.py  make_links.sh  test_rcemip_input.py  test_rcemip_input_2d.py  test_rcemip_input_rt.py
rfmip/: README.md  compare-to-reference.py  make_links.sh  rfmip_init.py  rfmip_plot.py  rfmip_postproc.py  rfmip_run.py  stage_files.py
src/: Aerosol_optics.cpp  CMakeLists.txt  Cloud_optics.cpp  Cloud_optics.cu  Fluxes.cpp  Fluxes.cu  Gas_concs.cpp  Gas_concs.cu  Gas_optics.cpp  Gas_optics_rrtmgp.cpp  Gas_optics_rrtmgp.cu  Optical_props.cpp  Optical_props.cu  Rte_lw.cpp  Rte_lw.cu  Rte_sw.cpp  Rte_sw.cu  Source_functions.cpp  Source_functions.cu
src_cuda/: Aerosol_optics.cu  CMakeLists.txt  Cloud_optics.cu  Fluxes.cu  Gas_concs.cu  Gas_optics_rrtmgp.cu  Mem_pool_gpu.cu  Optical_props.cu  Rte_lw.cu  Rte_sw.cu  Source_functions.cu  gas_optics_kernels.cu  rte_solver_kernels.cu  subset_kernels.cu  tools_gpu.cu
src_cuda_kernels/: gas_optics_kernels.cu  subset_kernels.cu
src_cuda_rt/: Aerosol_optics_rt.cu  CMakeLists.txt  Cloud_optics_rt.cu  Fluxes_rt.cu  Gas_concs_rt.cu  Gas_optics_rrtmgp_rt.cu  Optical_props_rt.cu  Raytracer.cu  Raytracer_bw.cu  Rte_lw_rt.cu  Rte_sw_rt.cu  Source_functions_rt.cu
src_fortran/: CMakeLists.txt  mo_rte_kind.F90
src_kernels/: CMakeLists.txt  mo_fluxes_byband_kernels.F90  mo_gas_optics_kernels.F90  mo_rte_kind.F90  mo_rte_solver_kernels.F90
src_kernels_cuda/: CMakeLists.txt  gas_optics_kernel_launchers.cu  gas_optics_kernels.cu  optical_props_kernel_launchers.cu  optical_props_kernels.cu  rte_solver_kernel_launchers.cu  rte_solver_kernels.cu  subset_kernel_launchers.cu  subset_kernels.cu  subset_kernels_launchers.cu
src_kernels_cuda_rt/: CMakeLists.txt  gas_optics_kernel_lauchers_rt.cu  gas_optics_kernel_launchers_rt.cu  gas_optics_kernels_rt.cu  gas_optics_rrtmgp_kernels_launchers_rt.cu  gas_optics_rrtmgp_kernels_rt.cu  gpt_combine_kernel_launchers_rt.cu  gpt_combine_kernels_launchers_rt.cu  gpt_combine_kernels_rt.cu  optical_props_kernel_launchers_rt.cu  optical_props_kernels_launchers_rt.cu  optical_props_kernels_rt.cu  raytracer_kernels.cu  raytracer_kernels_bw.cu  raytracer_kernels_rt.cu  rte_solver_kernel_launchers_rt.cu  rte_solver_kernels_launchers_rt.cu  rte_solver_kernels_rt.cu  subset_kernel_launchers_rt.cu  subset_kernels_rt.cu
src_test/: CMakeLists.txt  Netcdf_interface.cpp  Radiation_solver.cpp  Radiation_solver.cu  Radiation_solver_bw.cu  Radiation_solver_rt.cu  test_rcemip.cpp  test_rrtmgp.cpp  test_rt_lite.cu  test_rte_rrtmgp.cpp  test_rte_rrtmgp.cu  test_rte_rrtmgp_bw.cu  test_rte_rrtmgp_rt.cu
test/: CMakeLists.txt  test.cpp  test_gas_optics.cpp  test_rrtmgp.cpp
tuning_kernels_cuda/: README.md  add_fluxes_kernel.py  apply_bc_kernel.py  combine_and_reorder_2str.py  common.py  compute_tau_absorption_kernel.py  compute_tau_absorption_kernel_split.py  compute_tau_rayleigh_kernel.py  delta_scale_2str_k.py  increment_1scalar_by_1scalar.py  increment_2stream_by_2stream.py  interpolation_kernel.py  lw_solver_noscat.py  lw_solver_noscat_gaussquad.py  lw_solver_noscat_step1.py  planck_source_kernel.py  plot_timings.py  reorder123x321_kernel.py  sw_2stream_kernel.py  sw_source_2stream_kernel.py  sw_source_adding_kernel.py
tuning_kernels_cuda/reference_kernels/: optical_props_kernels.cu  rte_solver_kernels.cu
